[gd_scene load_steps=10 format=3 uid="uid://d15w3qccq2gc8"]

[ext_resource type="Script" path="res://enemies/enemy.gd" id="1_tnjn8"]
[ext_resource type="Texture2D" uid="uid://djvdh44acre7u" path="res://icon.svg" id="2_1djyi"]
[ext_resource type="AudioStream" uid="uid://cld5r8yhfux07" path="res://sfx/punch-3-166696.mp3" id="3_hj6iw"]
[ext_resource type="AudioStream" uid="uid://canfinpfol2qf" path="res://sfx/punch-6-166699.mp3" id="4_6k7hd"]

[sub_resource type="Animation" id="Animation_emtrv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Selector:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Selector:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bxk26"]
resource_name = "attack"
length = 0.45
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Selector:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.125, 0.225, 0.325, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Selector:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05, 0.125, 0.225, 0.325, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20), Vector2(0, -20), Vector2(0, 20), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_7spnc"]
resource_name = "damage"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Selector:position")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(38, -29), Vector2(-64, -67), Vector2(2, 55), Vector2(31, 7), Vector2(-26, -24), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4oexk"]
resource_name = "death"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Selector:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_45lhc"]
_data = {
"RESET": SubResource("Animation_emtrv"),
"attack": SubResource("Animation_bxk26"),
"damage": SubResource("Animation_7spnc"),
"death": SubResource("Animation_4oexk")
}

[node name="Enemy" type="Control" node_paths=PackedStringArray("hpLabel", "atkLabel", "buffLabel", "nameLabel", "animationPlayer")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_tnjn8")
hpLabel = NodePath("Labels/HP Label")
atkLabel = NodePath("Labels/ATK Label")
buffLabel = NodePath("Labels/Buff Label")
nameLabel = NodePath("Labels/Name Label")
animationPlayer = NodePath("AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_45lhc")
}

[node name="Labels" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_top = -20.0
offset_right = 136.0
offset_bottom = 116.0

[node name="HP Label" type="Label" parent="Labels"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 26.0
text = "HPPPPP"

[node name="ATK Label" type="Label" parent="Labels"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 26.0
grow_horizontal = 0
text = "ATK"

[node name="Buff Label" type="Label" parent="Labels"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.0
offset_top = 20.0
offset_right = 62.0
offset_bottom = 50.0
grow_horizontal = 2
text = "BUFF"
autowrap_mode = 2

[node name="Name Label" type="Label" parent="Labels"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.0
offset_top = -30.0
offset_right = 62.0
grow_horizontal = 2
text = "[name]"
horizontal_alignment = 1

[node name="Selector" type="Button" parent="."]
layout_mode = 1
offset_right = 136.0
offset_bottom = 136.0
icon = ExtResource("2_1djyi")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hj6iw")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6k7hd")

[connection signal="mouse_entered" from="Selector" to="." method="_on_selector_mouse_entered"]
[connection signal="mouse_exited" from="Selector" to="." method="_on_selector_mouse_exited"]
[connection signal="pressed" from="Selector" to="." method="_on_selector_pressed"]
